k8s/02_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: petclinic

spec:
  replicas: 2

  selector:
    matchLabels:
      app: petclinic

  template:
    metadata:
      labels:
        app: petclinic

    spec:
      containers:
      - name: petclinic
        image: 450444046629.dkr.ecr.eu-north-1.amazonaws.com/user29-petclinic:v2
        imagePullPolicy: Always

        ports:
        - containerPort: 8080
