k8s/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: petclinic

spec:
  type: NodePort

  selector:
    app: petclinic

  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
