k8s/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: petclinic-ingress
  namespace: petclinic

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: petclinic-service
                port:
                  number: 80
